--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -1,6 +1,6 @@
 .wrapper {
     /* padding-top: 50px; */
-    background: #002a41;
+    background: #548300;
     height: 100%;
     display: flex;
     flex-flow: row wrap;
